adding links to 3 websites that form my portfolio

--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,8 @@
           <td id="image"><img src ="images/dennis.jpg" alt="A Picture of Dennis Mwangi"></td>
           <td> <p class="name"> <h1> <strong>Dennis Mwangi</strong></h1></p>
             <p class="name"> <h1><em>Banker--Marketer--Techie</em></h1> </p>
+            <p class="name"> <h2><strong>Email:</strong> <span class="contacts"> Denniskaranjaonline@gmail.com <span> </h2> </p>
+            <p class="name"> <h2><strong>Telephone:</strong> <span class="contacts"> +254 722 746747 <span> </h2> </p>
            </td>
         </tr>
       </table>
@@ -41,12 +43,11 @@
   <div class="column side">
     <h2>Website Portfolio</h2>
     <ul class="portfolio">
-      <li> Wayne Rooney</li>
-      <li> Ryan Giggs</li>
-      <li>Michael Carrick </li>
-      <li>David De Gea </li>
+      <li>We all have a passion or hobby. This website is about <a href="https://dennismwangi.github.io/Gregory-the-newt/"> <span class="links"> Gregory The Newt </span>  </a> a Mombasa born reptile who now lives in Karen. As a <strong> pet ! </strong></li>
+      <li>When you feel burnt out and need to relax and enjoy fine dining in a tranquil environment <a href="https://dennismwangi.github.io/weaver-bird-resort/"> <span class="links"> Weaverbird Resort </span>  </a> have you  <strong> mind </strong></li>
+      <li>Do you have plans for the Holiday? You should actually! Checkout <a href="https://dennismwangi.github.io/happy-trails-travel/"> <span class="links"> Happy Trails Travel </span>  </a> for a <strong> customized</strong> holiday package</li>
     </ul>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+
   </div>
 
 
