adding background image and fonts to files insecond branch

--- a/landing.html
+++ b/landing.html
@@ -1,16 +1,17 @@
 <html>
   <head>
-        <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
-     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Advent+Pro:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>Dennis Mwangi Website Portfolio</title>
 
-
-  <body background ="images/background2.jpg">
+  <body background ="images/builder.jpeg">
     <div class="top">
       <table>
         <tr>
           <td id="image"><img src ="images/dennis.jpg" alt="A Picture of Dennis Mwangi"></td>
           <td> <p class="name"> <h1> <strong>Dennis Mwangi</strong></h1></p>
-            <p class="name"> <h1><em>Banker--Marketer--Techie</em></h1> </p>
+            <p class="name"> <h1>Banker--Marketer--Techie</h1> </p>
             <p class="name"> <h2><strong>Email:</strong> <span class="contacts"> Denniskaranjaonline@gmail.com <span> </h2> </p>
             <p class="name"> <h2><strong>Telephone:</strong> <span class="contacts"> +254 722 746747 <span> </h2> </p>
            </td>
