adding background image to second branch

--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Dennis Mwangi Website Portfolio</title>
 
-  <body background ="images/builder.jpeg">
+  <body background ="images/background2.jpg">
     <div class="top">
       <table>
         <tr>
@@ -22,22 +22,22 @@
 
     <div class="column side">
       <h2>About Me</h2>
-      <p>I am a creative, result oriented and passionate Business and Relationship Development professional. I posses broad based expertise in relationship and sales management.  Through customer orientation, I am able to grow a portfolio through new customer on boarding and enhancing the existing customers’ relationships.</p>
+      <p>I am a creative, result oriented and passionate about all things tech. I believe the world has no space for technology conservatives...and that the much touted zombie apocalypse will be through technology.So i decided to learn coding to save the world and mostly myself from the apocalypse</p>
       </div>
 
   <div class="column middle">
     <h2>Education </h2>
     <ul>
       <li>Professional Certificate in Marketing (CIM) - Chartered Institute of Marketing, UK.  </li>
-      <li>Bachelor of Business Information Technology, 2nd Upper, Jomo Kenyatta University of Agriculture and Technology, 2007-2010.</li>
-      <li>Kenya Certificate of Secondary Education, B (Plain), Utumishi Academy, 2002-2005.</li>
+      <li>Bachelor of Business Information Technology, 2nd Upper, Jomo Kenyatta University of Agriculture and Technology.</li>
+      <li>Kenya Certificate of Secondary Education, Utumishi Academy.</li>
     </ul>
 
     <h2>Work Expereience</h2>
     <ul>
-      <li>Professional Certificate in Marketing (CIM) - Chartered Institute of Marketing, UK.  </li>
-      <li>Bachelor of Business Information Technology, 2nd Upper, Jomo Kenyatta University of Agriculture and Technology, 2007-2010.</li>
-      <li>Kenya Certificate of Secondary Education, B (Plain), Utumishi Academy, 2002-2005.</li>
+      <li>Youth Proposition Manager- Commercial Bank of Africa, CBA. (October 2016 to Date)  </li>
+      <li>Branch Relationship Officer- Commercial Bank of Africa, CBA. (March 2014 to September 2016) .</li>
+      <li>New Business Officer- Standard Chartered Bank. (August 2010 to February 2014) </li>
     </ul>
   </div>
 
